--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dombele | Photographer</title>
+    <title>Dombele Studio</title>
     <style>
       body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        background-color: #fafafa;
-        color: #222;
+        background-color: #ffffff;
+        color: #111;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -17,42 +17,41 @@
         margin: 0;
         text-align: center;
       }
+
       h1 {
-        font-size: 2.2rem;
+        font-size: 2.5rem;
+        font-weight: 700;
+        letter-spacing: 1px;
         margin-bottom: 0.5rem;
-        letter-spacing: 0.5px;
       }
+
       p {
         font-size: 1.1rem;
-        margin: 0.3rem 0;
+        margin: 0.4rem 0;
+        color: #333;
       }
+
       a {
-        color: #555;
+        color: #111;
         text-decoration: none;
         font-weight: 500;
+        border-bottom: 1px solid transparent;
+        transition: all 0.2s ease-in-out;
       }
+
       a:hover {
-        color: #000;
+        border-bottom: 1px solid #111;
+        opacity: 0.8;
       }
+
       footer {
         margin-top: 2rem;
         font-size: 0.9rem;
-        color: #777;
+        color: #666;
       }
     </style>
   </head>
+
   <body>
     <h1>Dombele</h1>
-    <p>Photographer | Studio Portraits & Creative Shoots</p>
-    <p>
-      <a href="https://instagram.com/yourhandle" target="_blank">@yourhandle</a>
-    </p>
-    <p>
-      <a href="mailto:your@email.com">your@email.com</a>
-    </p>
-
-    <footer>
-      <p>© 2025 Dombele — All rights reserved.</p>
-    </footer>
-  </body>
-</html>
+    <p>Photographer | Studio Portraits & Creat
