Fix HTML structure and add contact links

--- a/index.html
+++ b/index.html
@@ -54,4 +54,18 @@
 
   <body>
     <h1>Dombele</h1>
-    <p>Photographer | Studio Portraits & Creat
+    <p>Photographer | Studio Portraits & Creative Shoots</p>
+
+    <p>
+      <a href="https://instagram.com/dombele.studio" target="_blank">@dombele.studio</a>
+    </p>
+    <p>
+      <a href="mailto:studio@dombele.com">studio@dombele.com</a>
+    </p>
+
+    <footer>
+      <p>© 2025 Dombele — All rights reserved.</p>
+    </footer>
+  </body>
+</html>
+
