--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <style>
       :root {
-        --fg: #0e0e0e;          /* text color */
-        --sub: #4a4a4a;         /* secondary text */
-        --bg: #faf9f7;          /* soft background */
-        --line: #e7e7e7;        /* divider */
+        --fg: #0e0e0e;
+        --sub: #4a4a4a;
+        --bg: #faf9f7;
+        --line: #e7e7e7;
       }
 
       html, body {
@@ -34,21 +34,9 @@
       }
 
       .logo {
-        width: 70px;
-        height: 70px;
-        margin: 0 auto 1.2rem;
-        border-radius: 50%;
-        background: var(--fg);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .logo span {
-        color: #fff;
-        font-size: 1.5rem;
-        font-weight: 700;
-        letter-spacing: 1px;
+        width: 90px;
+        height: auto;
+        margin: 0 auto 1.5rem;
       }
 
       h1 {
@@ -104,7 +92,7 @@
 
   <body>
     <main class="wrap" role="main">
-      <div class="logo" aria-hidden="true"><span>D</span></div>
+      <img src="black logo.png" alt="Dombele Studio logo" class="logo" />
       <h1>Dombele Chindandy</h1>
       <p class="subtitle">Photographer · Studio Portraits & Creative Shoots</p>
 
@@ -121,4 +109,5 @@
     </main>
   </body>
 </html>
+
 
