Update title and name in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DOMBELE CHINDANDY | Photographer</title>
-    <meta name="description" content="Dombele Chindandy — Photographer. Fashion, Beauty, and Portrait work based in the UK." />
+    <title>DOMBELE| Photographer</title>
+    <meta name="description" content="Dombele — Photographer. Fashion, Beauty, and Portrait work based in the UK." />
 
     <style>
       :root {
@@ -91,7 +91,7 @@
       <img src="black logo.png" alt="Dombele Studio logo" class="logo" />
 
       <!-- Name -->
-      <h1>DOMBELE CHINDANDY</h1>
+      <h1>DOMBELE</h1>
 
       <!-- Tagline -->
       <p class="subtitle">Photographer · Fashion | Beauty | Portraits |</p>
@@ -109,7 +109,7 @@
       <a href="https://instagram.com/dombele.studio" target="_blank" rel="noopener">@dombele.studio</a>
 
       <footer>
-        © 2025 Dombele Chindandy — All rights reserved.
+        © 2025 Dombele — All rights reserved.
       </footer>
     </main>
   </body>
